[project]
name = "Lo2T"
version = "2025.6.0"
dependencies = [
    "gcn_kafka",
    "numpy",
    "matplotlib",
    "astropy",
    "astropy_healpix",
]
requires-python = ">=3.11"
authors = [
  {name = "Steven Rieder", email="s.rieder@uva.nl"}
]
description = "LOFAR 2.0 triggering software"
license = {text = "MIT License"}
keywords = ["radioastronomy", "astronomy", "radio", "LOFAR", "triggering"]
readme = "README.md"

[project.urls]
Repository = "https://github.com/antonpannekoek/Lo2T"
Issues = "https://github.com/antonpannekoek/Lo2T/issues"
