[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit]

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
# Example formatted version: 1.2.4.dev42+ge174a1f

dirty = "{base_version}+d{build_date:%Y%m%d}"
# Example formatted version: 1.2.3+d20230922

distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"
# Example formatted version: 1.2.4.dev42+ge174a1f.d20230922

[project]
name = "Lo2T"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "gcn_kafka",
    "numpy",
    "matplotlib",
    "astropy",
    "astropy_healpix",
    "lxml",  # for voevent xml notices
]
authors = [
  {name = "Steven Rieder", email="s.rieder@uva.nl"}
]
description = "LOFAR 2.0 triggering software"
license = {text = "MIT License"}
keywords = ["radioastronomy", "astronomy", "radio", "LOFAR", "triggering"]
readme = "README.md"

[project.optional-dependencies]
dev = ["black", "flake8", "pytest"]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/antonpannekoek/Lo2T"
Issues = "https://github.com/antonpannekoek/Lo2T/issues"
